# rust-ios-bazel-demo

./: .gitignore  BUILD  Cargo.toml  MODULE.bazel  README.md  WORKSPACE
src/: App.swift  lib.rs  rust_c_wrapper.h
