module(
    name = "rust-ios-bazel-demo",
    version = "0.1.0",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "0.0.7")
bazel_dep(name = "rules_apple", version = "3.0.0-rc2", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_swift", version = "1.11.0", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_xcodeproj", version = "1.10.1", dev_dependency = True)
